// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 1`] = `
Object {
  "description": "Hyväksymispäätösvaihe saamenkielisellä kuulutuksella ja ilmoituksella",
  "mockedtime": "2022-06-09T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/1/saameilmoitus.pdf",
        "tila": "VALMIS",
        "tuotu": "2022-06-09T00:00",
        "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/1/saamekuulutus.pdf",
        "tila": "VALMIS",
        "tuotu": "2022-06-09T00:00",
        "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 2`] = `
Object {
  "yllapito S3 files Hyväksymispäätösvaihe saamenkielisellä kuulutuksella ja ilmoituksella": Object {
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 3`] = `
Object {
  "description": "hyvaksymisPaatosVaiheJulkaisu saamenkielisellä kuulutuksella ja ilmoituksella",
  "mockedtime": "2022-06-09T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/1/saameilmoitus.pdf",
        "tila": "VALMIS",
        "tuotu": "2022-06-09T00:00",
        "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/1/saamekuulutus.pdf",
        "tila": "VALMIS",
        "tuotu": "2022-06-09T00:00",
        "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 4`] = `
Object {
  "yllapito S3 files hyvaksymisPaatosVaiheJulkaisu saamenkielisellä kuulutuksella ja ilmoituksella ylläpidossa": Object {
    "/1/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431%20Kuulutus%20hyvaksymispaatoksen%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_1%20Ilmoitus%20hyvaksymispaatoksesta%20kunnalle%20ja%20toiselle%20viranomaiselle.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_2%20Ilmoitus%20hyvaksymispaatoksen%20kuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_3%20Ilmoitus%20hyvaksymispaatoksesta%20lausunnon%20antajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_LAUSUNNONANTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_4%20Ilmoitus%20hyvaksymispaatoksesta%20kiinteistonomistajille%20ja%20muistuttajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_MUISTUTTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
    },
    "/1/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "fileType": "AINEISTO",
    },
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 5`] = `
Object {
  "description": "Julkisen hyvaksymisPaatosVaiheen saamenkieliset PDFt",
  "mockedtime": "2022-06-09T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaiheSaamePDFt": Object {
      "POHJOISSAAME": Object {
        "__typename": "KuulutusSaamePDF",
        "kuulutusIlmoitusPDF": Object {
          "__typename": "LadattuTiedosto",
          "jarjestys": undefined,
          "nimi": "saameilmoitus.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saameilmoitus.pdf",
          "tila": "VALMIS",
          "tuotu": "2022-06-09T00:00",
          "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
        },
        "kuulutusPDF": Object {
          "__typename": "LadattuTiedosto",
          "jarjestys": undefined,
          "nimi": "saamekuulutus.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saamekuulutus.pdf",
          "tila": "VALMIS",
          "tuotu": "2022-06-09T00:00",
          "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
        },
      },
      "__typename": "KuulutusSaamePDFt",
    },
    "kuulutusPDF": Object {
      "SUOMI": "/tiedostot/suunnitelma/3/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
      "__typename": "KuulutusPDFJulkinen",
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 6`] = `
Object {
  "public S3 files hyvaksymisPaatosVaiheJulkaisu saamenkielisellä kuulutuksella ja ilmoituksella kansalaisille": Object {
    "/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431%20Kuulutus%20hyvaksymispaatoksen%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_1%20Ilmoitus%20hyvaksymispaatoksesta%20kunnalle%20ja%20toiselle%20viranomaiselle.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_2%20Ilmoitus%20hyvaksymispaatoksen%20kuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_3%20Ilmoitus%20hyvaksymispaatoksesta%20lausunnon%20antajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_LAUSUNNONANTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_4%20Ilmoitus%20hyvaksymispaatoksesta%20kiinteistonomistajille%20ja%20muistuttajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_MUISTUTTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "expirationDate": "2040-01-01T23:59:59+02:00",
      "fileType": "AINEISTO",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 7`] = `
Object {
  "description": "publicProjekti hyvaksymisPaatosVaiheJulkinenAfterAsetaUudelleenkuulutettavaksi",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo1",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "traficom-123",
      "hyvaksymisPaatoksenPvm": "2022-02-03",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": undefined,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo2",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hyvaksymisPaatosVaiheSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/3/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Päätökseen voi valittamalla hakea muutosta Hämeenlinnan hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.",
        ],
        "kuvausTekstit": Array [],
        "leipaTekstit": Array [
          "Liikenne- ja viestintävirasto on 3.2.2022 päätöksellään traficom-123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 3",
          "Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä <strong>9.6.2022 - 1.1.2040</strong>.  Asianosaisten katsotaan saaneen tiedon seitsemäntenä päivänä kuulutuksen julkaisemispäivästä (hallintolaki 62 a §).",
          "Kuulutus, päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus julkaistaan 9.6.2022 osoitteessa <a href=\\"https://localhost:3000/s/0894/hyvaksymispaatos\\">https://localhost:3000/s/0894/hyvaksymispaatos</a>.",
          "Kuulutettavasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.",
        ],
        "tietosuoja": "Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely\\">https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely</a>.",
      },
      "kuulutusVaihePaattyyPaiva": "2040-01-01",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "geoJSON": undefined,
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "kuvaus": undefined,
        "linkki": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 8`] = `
Object {
  "description": "testVaiheAfterSiirraUudelleenkuulutettavaksi",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo1",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "traficom-123",
      "hyvaksymisPaatoksenPvm": "2022-02-03",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": undefined,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo2",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hyvaksymisPaatosVaiheSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 91,
            "sahkoposti": "",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 92,
            "sahkoposti": "",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2040-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "muokkausTila": "MUOKKAUS",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": undefined,
        "selosteLahetekirjeeseen": undefined,
        "tila": "JULKAISTU_PERUUTETTU",
      },
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 9`] = `
Object {
  "description": "testJulkaisuAfterUudelleenkuulutus",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaiheJulkaisu": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisu",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo1",
        },
      ],
      "asianhallintaSynkronointiTila": "EI_TESTATTAVISSA",
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "traficom-123",
      "hyvaksymisPaatoksenPvm": "2022-02-03",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": undefined,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo2",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hyvaksymisPaatosVaihePDFt": Object {
        "SUOMI": Object {
          "__typename": "HyvaksymisPaatosVaihePDF",
          "hyvaksymisIlmoitusLausunnonantajillePDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
          "hyvaksymisIlmoitusMuistuttajillePDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf",
          "hyvaksymisKuulutusPDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaKunnalleToiselleViranomaisellePDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaPDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
        },
        "__typename": "HyvaksymisPaatosVaihePDFt",
      },
      "hyvaksymisPaatosVaiheSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 91,
            "sahkoposti": "",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 92,
            "sahkoposti": "",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPaiva": "2039-01-02",
      "kuulutusVaihePaattyyPaiva": "2039-02-02",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "maanomistajaluettelo": "/hyvaksymispaatos/2/T416 Maanomistajaluettelo ja muistuttajat 20390102 2.xlsx",
      "muokkaaja": "A000111",
      "tila": "ODOTTAA_HYVAKSYNTAA",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": Object {
          "SUOMI": "Kuulutetaan uudelleen kuulutusteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "selosteLahetekirjeeseen": Object {
          "SUOMI": "Kuulutetaan uudelleen lähetekirjeteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "tila": "JULKAISTU_PERUUTETTU",
      },
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "linkitetytProjektit": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 10`] = `
Object {
  "description": "testJulkaisuAfterUudelleenkuulutus",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaiheJulkaisu": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisu",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo1",
        },
      ],
      "asianhallintaSynkronointiTila": "EI_TESTATTAVISSA",
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksyja": "A000112",
      "hyvaksymisPaatoksenAsianumero": "traficom-123",
      "hyvaksymisPaatoksenPvm": "2022-02-03",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": undefined,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo2",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hyvaksymisPaatosVaihePDFt": Object {
        "SUOMI": Object {
          "__typename": "HyvaksymisPaatosVaihePDF",
          "hyvaksymisIlmoitusLausunnonantajillePDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
          "hyvaksymisIlmoitusMuistuttajillePDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf",
          "hyvaksymisKuulutusPDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaKunnalleToiselleViranomaisellePDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaPDFPath": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
        },
        "__typename": "HyvaksymisPaatosVaihePDFt",
      },
      "hyvaksymisPaatosVaiheSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "hyvaksymisPaiva": "***unittest***",
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 91,
            "sahkoposti": "",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 92,
            "sahkoposti": "",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPaiva": "2039-01-02",
      "kuulutusVaihePaattyyPaiva": "2039-02-02",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "lahetekirje": Object {
        "nimi": "lähetekirje.eml",
        "tiedosto": "/hyvaksymispaatos/2/lähetekirje.eml",
        "tila": "VALMIS",
        "tuotu": "2039-01-02T00:00",
        "uuid": "00000006-6d14-4058-82a9-99a4c224524a",
      },
      "maanomistajaluettelo": "/hyvaksymispaatos/2/T416 Maanomistajaluettelo ja muistuttajat 20390102 2.xlsx",
      "muokkaaja": "A000111",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": Object {
          "SUOMI": "Kuulutetaan uudelleen kuulutusteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "selosteLahetekirjeeseen": Object {
          "SUOMI": "Kuulutetaan uudelleen lähetekirjeteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "tila": "JULKAISTU_PERUUTETTU",
      },
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "linkitetytProjektit": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "tyyppi": "TIE",
        "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 11`] = `
Object {
  "description": "testLuonnosAfterUudelleenkuulutus",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoMuokkaus": undefined,
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo1",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "traficom-123",
      "hyvaksymisPaatoksenPvm": "2022-02-03",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": undefined,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo2",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hyvaksymisPaatosVaiheSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "id": 2,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 91,
            "sahkoposti": "",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 92,
            "sahkoposti": "",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2039-01-02",
      "kuulutusVaihePaattyyPaiva": "2039-02-02",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "muokkausTila": "LUKU",
      "uudelleenKuulutus": null,
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 12`] = `
Object {
  "description": "publicProjekti hyvaksymisPaatosVaiheJulkinenAfterHyvaksyUudelleenKuulutus",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo1",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "traficom-123",
      "hyvaksymisPaatoksenPvm": "2022-02-03",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "kategoriaId": undefined,
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "foo2",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "FOO",
          "nimi": "foo.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/paatos/TYHJ%C3%84.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
          "uuid": "jotain",
        },
      ],
      "hyvaksymisPaatosVaiheSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kuulutusIlmoitusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saameilmoitus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saameilmoitus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
          },
          "kuulutusPDF": Object {
            "__typename": "LadattuTiedosto",
            "jarjestys": undefined,
            "nimi": "saamekuulutus.pdf",
            "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saamekuulutus.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
            "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
          },
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektinimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/3/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2039-01-02",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Päätökseen voi valittamalla hakea muutosta Hämeenlinnan hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.",
        ],
        "kuvausTekstit": Array [],
        "leipaTekstit": Array [
          "Liikenne- ja viestintävirasto on 3.2.2022 päätöksellään traficom-123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Testiprojekti 3",
          "Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä <strong>2.1.2039 - 2.2.2039</strong>.  Asianosaisten katsotaan saaneen tiedon seitsemäntenä päivänä kuulutuksen julkaisemispäivästä (hallintolaki 62 a §).",
          "Kuulutus, päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus julkaistaan 2.1.2039 osoitteessa <a href=\\"https://localhost:3000/s/0894/hyvaksymispaatos\\">https://localhost:3000/s/0894/hyvaksymispaatos</a>.",
          "Kuulutettavasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.",
        ],
        "tietosuoja": "Uudenmaan ELY-keskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely\\">https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely</a>.",
      },
      "kuulutusVaihePaattyyPaiva": "2039-02-02",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": Object {
        "__typename": "UudelleenKuulutus",
        "alkuperainenHyvaksymisPaiva": "***unittest***",
        "selosteKuulutukselle": Object {
          "SUOMI": "Kuulutetaan uudelleen kuulutusteksti ...",
          "__typename": "LokalisoituTeksti",
        },
        "selosteLahetekirjeeseen": null,
        "tila": "JULKAISTU_PERUUTETTU",
      },
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": "ELY/3/2022",
        "asiatunnusVayla": "VAYLA/3/2022",
        "geoJSON": undefined,
        "kunnat": Array [
          491,
          178,
          740,
        ],
        "kuvaus": undefined,
        "linkki": undefined,
        "maakunnat": Array [
          1,
          6,
        ],
        "nimi": "Testiprojekti 3",
        "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "123456789",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 13`] = `
Object {
  "description": "hyvaksymisPaatosVaiheJulkaisu saamenkielisellä kuulutuksella ja ilmoituksella",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "KuulutusSaamePDF",
      "kuulutusIlmoitusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saameilmoitus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saameilmoitus.pdf",
        "tila": "VALMIS",
        "tuotu": "2022-06-09T00:00",
        "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
      },
      "kuulutusPDF": Object {
        "__typename": "LadattuTiedosto",
        "jarjestys": undefined,
        "nimi": "saamekuulutus.pdf",
        "tiedosto": "/yllapito/tiedostot/projekti/3/hyvaksymispaatos/2/saamekuulutus.pdf",
        "tila": "VALMIS",
        "tuotu": "2022-06-09T00:00",
        "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
      },
    },
    "__typename": "KuulutusSaamePDFt",
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 14`] = `
Object {
  "yllapito S3 files hyvaksymisPaatosVaiheJulkaisu saamenkielisellä kuulutuksella ja ilmoituksella ylläpidossa": Object {
    "/1/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431%20Kuulutus%20hyvaksymispaatoksen%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_1%20Ilmoitus%20hyvaksymispaatoksesta%20kunnalle%20ja%20toiselle%20viranomaiselle.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_2%20Ilmoitus%20hyvaksymispaatoksen%20kuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_3%20Ilmoitus%20hyvaksymispaatoksesta%20lausunnon%20antajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_LAUSUNNONANTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_4%20Ilmoitus%20hyvaksymispaatoksesta%20kiinteistonomistajille%20ja%20muistuttajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_MUISTUTTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
    "/1/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
    },
    "/1/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "fileType": "AINEISTO",
    },
    "/1/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
    },
    "/1/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
    },
    "/2/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431%20Kuulutus%20hyvaksymispaatoksen%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/2/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_1%20Ilmoitus%20hyvaksymispaatoksesta%20kunnalle%20ja%20toiselle%20viranomaiselle.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/2/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_2%20Ilmoitus%20hyvaksymispaatoksen%20kuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/2/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_3%20Ilmoitus%20hyvaksymispaatoksesta%20lausunnon%20antajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_LAUSUNNONANTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/2/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_4%20Ilmoitus%20hyvaksymispaatoksesta%20kiinteistonomistajille%20ja%20muistuttajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_MUISTUTTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/2/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
    },
    "/2/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "fileType": "AINEISTO",
    },
    "/2/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
    },
    "/2/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 15`] = `
Object {
  "description": "Julkisen hyvaksymisPaatosVaiheen saamenkieliset PDFt",
  "mockedtime": "2039-01-02T00:00",
  "obj": Object {
    "hyvaksymisPaatosVaiheSaamePDFt": Object {
      "POHJOISSAAME": Object {
        "__typename": "KuulutusSaamePDF",
        "kuulutusIlmoitusPDF": Object {
          "__typename": "LadattuTiedosto",
          "jarjestys": undefined,
          "nimi": "saameilmoitus.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saameilmoitus.pdf",
          "tila": "VALMIS",
          "tuotu": "2022-06-09T00:00",
          "uuid": "00000004-6d14-4058-82a9-99a4c224524a",
        },
        "kuulutusPDF": Object {
          "__typename": "LadattuTiedosto",
          "jarjestys": undefined,
          "nimi": "saamekuulutus.pdf",
          "tiedosto": "/tiedostot/suunnitelma/3/hyvaksymispaatos/saamekuulutus.pdf",
          "tila": "VALMIS",
          "tuotu": "2022-06-09T00:00",
          "uuid": "00000003-6d14-4058-82a9-99a4c224524a",
        },
      },
      "__typename": "KuulutusSaamePDFt",
    },
    "kuulutusPDF": Object {
      "SUOMI": "/tiedostot/suunnitelma/3/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
      "__typename": "KuulutusPDFJulkinen",
    },
  },
}
`;

exports[`Hyväksymispäätös suorita hyväksymispäätösvaihe saamen kielellä onnistuneesti 16`] = `
Object {
  "public S3 files hyvaksymisPaatosVaiheJulkaisu saamenkielisellä kuulutuksella ja ilmoituksella kansalaisille": Object {
    "/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431%20Kuulutus%20hyvaksymispaatoksen%20nahtavillaolo.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_1%20Ilmoitus%20hyvaksymispaatoksesta%20kunnalle%20ja%20toiselle%20viranomaiselle.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_2%20Ilmoitus%20hyvaksymispaatoksen%20kuulutuksesta.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_3%20Ilmoitus%20hyvaksymispaatoksesta%20lausunnon%20antajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_LAUSUNNONANTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T431_4%20Ilmoitus%20hyvaksymispaatoksesta%20kiinteistonomistajille%20ja%20muistuttajille.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_MUISTUTTAJILLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE_LAHETEKIRJE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/paatos/TYHJÄ.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''TYHJ%C3%84.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "expirationDate": "2039-02-02T23:59:59+02:00",
      "fileType": "AINEISTO",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/saameilmoitus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "ILMOITUS_HYVAKSYMISPAATOSKUULUTUKSESTA_KUNNALLE_JA_TOISELLE_VIRANOMAISELLE",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
    "/saamekuulutus.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "HYVAKSYMISPAATOSKUULUTUS",
      "checksum": "ABC123",
      "publishDate": "2039-01-02T00:00:00+02:00",
    },
  },
}
`;
